# agenda_rpc

./: CMakeLists.txt  Contact.c  Contact.h  Contacts.c  Contacts.h  Makefile  README.md  rbd.h  rbd.x  rbd_client.c  rbd_clnt.c  rbd_server.c  rbd_svc.c  rbd_xdr.c
